--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,30 +10,134 @@ body {
     background-color: #fafafa;
     color: #212121;
     line-height: 1.5;
+    padding: 0;
+    padding-bottom: 25px;
+    margin: 0;
 }
-
+.wrapper {
+    width: 100%;
+    height: 60px;
+    position: fixed;
+    top: 0;
+    background-color: blue;
+   
+}
+.search-form {
+    position: absolute;
+    top: 15px;
+    left: 50%;
+    transform: translate(-50%);
+     
+}
 .gallery {
+    margin-top: 65px;
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 20px;
 }
 .photo-card {
-    flex-basis: calc((100% - 30px) / 4);
+    flex-basis: calc((100% - 60px) / 4);
     
     border-radius: 4px;
+    box-shadow: 3px 10px 17px -1px rgba(0, 0, 0, 0.72);
+        -webkit-box-shadow: 3px 10px 17px -1px rgba(0, 0, 0, 0.72);
+    
+}
+.photo {
+    /* width: 100%; */
+    height: 300px;
     
 }
 img {
     display: block;
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
 }
+
+
 .info {
     display: flex;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 .info-item {
     margin-left: 10px;
 }
+
+.load-more {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    width: 250px;
+    height: 50px;
+    background-color: blue;
+    color: #fafafa;
+    font-size: medium;
+    font-weight: 300;
+    cursor: pointer;
+    border: transparent;
+    border-radius: 2px;
+}
+.load-more:hover {
+    box-shadow: 3px 10px 17px -1px rgba(0, 0, 0, 0.72);
+}
+
+
+
+
+
+#loader {
+    animation: animate 1.5s linear infinite;
+    clip: rect(0, 80px, 80px, 40px);
+    height: 60px;
+    width: 60px;
+    position: absolute;
+    left: calc(50% - 40px);
+    margin-top: 20px;
+    margin-bottom: 20px;
+    
+}
+@keyframes animate {
+    0% {
+        transform: rotate(0deg)
+    }
+
+    100% {
+        transform: rotate(220deg)
+    }
+}
+
+#loader:after {
+    animation: animate2 1.5s ease-in-out infinite;
+    clip: rect(0, 80px, 80px, 40px);
+    content: '';
+    border-radius: 50%;
+    height: 60px;
+    width: 60px;
+    position: absolute;
+}
+@keyframes animate2 {
+    0% {
+        box-shadow: inset rgb(5, 10, 109) 0 0 0 17px;
+        transform: rotate(-140deg);
+    }
+
+    50% {
+        box-shadow: inset rgb(5, 10, 109) 0 0 0 2px;
+    }
+
+    100% {
+        box-shadow: inset rgb(5, 10, 109) 0 0 0 17px;
+        transform: rotate(140deg);
+    }
+}
+
+
 .hidden {
     display: none;
 }
+
+
+
